# jeroo

./: .gitignore  .gitlab-ci.yml  .stylelintrc  README.md  angular.json  karma.conf.js  package-lock.json  package.json  tsconfig.json  tslint.json
documentation/: .gitignore  bytecode.org
e2e/: protractor-ci.conf.js  protractor.conf.js
e2e/src/: app.e2e-spec.ts  dashboard.e2e-spec.ts  dashboard.po.ts
src/: .htaccess  index.html  jeroo-theme.scss  karma.conf.js  main.ts  manifest.webmanifest  polyfills.ts  styles-variables.scss  styles.scss  test.ts  tslint.json  typings.d.ts
src/app/: Pipes.ts  app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  bytecode-interpreter.service.spec.ts  bytecode-interpreter.service.ts  code.service.spec.ts  code.service.ts  codemirror.service.ts  island.service.spec.ts  island.service.ts  jeroo.service.ts  jeroo.ts  jerooConstants.ts  jerooDirection.ts  jerooTileType.ts  material.module.ts  matrix.service.spec.ts  matrix.service.ts  matrixConstants.ts  message.service.ts  print.service.ts  selected-tile-type.service.ts  storage.ts  tileType.ts
src/app/bytecode-interpreter/: CollisionType.ts  bytecode-interpreter.service.spec.ts  bytecode-interpreter.service.ts  direction.ts  jeroo.ts
src/app/cache-dialog/: cache-dialog.component.html  cache-dialog.component.ts
src/app/change-island-size-dialog/: change-island-size-dialog.component.ts  (+2 more)
src/compiler/: .gitignore  JerooCompiler.ml  JerooCompilerUtils.ml  dune  jeroo-compiler.opam  jeroo_compiler.ml  lexer.mll
src/compiler/cli/: JerooCompilerCLI.ml  dune
src/compiler/cli/test_files/: python_test.jsc  test.jsc  vb_test.jsc
src/compiler/lib/: AST.ml  Bytecode.ml  Codegen.ml  Codegen.mli  Compiler.ml  Compiler.mli  Deque.ml  Deque.mli  Exceptions.ml  Java.messages  JavaLexer.mll  JavaLexerState.ml  JavaParser.mly  JavaTokenMapper.ml  JerooType.ml  LexingUtils.ml  LexingUtils.mli  Pane.ml  Parser.ml  Parser.mli  Position.ml  Python.messages  PythonLexer.mll  PythonLexerState.ml  PythonParser.mly  PythonTokenMapper.ml  StringUtils.ml  SymbolTable.ml  SymbolTable.mli  TypeChecker.ml  TypeChecker.mli  VB.messages  VBLexer.mll  VBLexerState.ml  VBParser.mly  VBTokenMapper.ml  dune  lexer.mll  parser.mly
src/compiler/test/: CodegenTests.ml  DequeTests.ml  IntegrationTests.ml  JavaTests.ml  LexingUtilsTests.ml  PythonTests.ml  StringUtilsTests.ml  SymbolTableTests.ml  TypeCheckerTests.ml  VBTests.ml  dune  main.ml  test.ml
src/environments/: environment.prod.ts  environment.ts
(+164 files in other folders)
