(library
  (name Lib)
  (libraries menhirLib)
)
(ocamllex JavaLexer VBLexer)
(rule
  (targets JavaMessages.ml)
  (deps Java.messages)
  (action (with-stdout-to %{targets}
          (run menhir --compile-errors %{workspace_root}/lib/Java.messages %{workspace_root}/lib/JavaParser.mly)
          )
  )
)
(rule
  (targets VBMessages.ml)
  (deps VB.messages)
  (action (with-stdout-to %{targets}
          (run menhir --compile-errors %{workspace_root}/lib/VB.messages %{workspace_root}/lib/VBParser.mly)
          )
  )
)
(menhir (modules JavaParser VBParser)
(flags (--table))
)
